@@ -1,5 +1,7 @@
 all: Module
 
 Module:
-	g++ Module.cpp -o Module
+	g++ Module.cpp -o Module.o
+clean:
+	rm -f *.o temp
 
